Modified project settings

--- a/project.config
+++ b/project.config
@@ -3,3 +3,5 @@
 	description = Samsung Galaxy Nexus vendor - contains prebuilts
 [receive]
 	requireChangeId = true
+[submit]
+	action = cherry pick
